added dummy verify.yml to run molecule test

--- a/.github/workflows/molecule-test.yml
+++ b/.github/workflows/molecule-test.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Molecule
         uses: gofrolist/molecule-action@v2
         with:
-          molecule_command: converge
+          molecule_command: test
         env:
           ANSIBLE_FORCE_COLOR: '1'
