--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,7 +3,7 @@ dependency:
   name: galaxy
   enabled: true
   options:
-    role-file: molecule/default/requirements.yml
+    role-file: requirements.yml
 driver:
   name: docker
 lint: |
